# Teddy

./: AUTHORS  BUGS  CHANGELOG  Doxyfile  Makefile.in  README  README.Amiga.txt  README.Cygwin.txt  README.MingW.txt  README.VisualC.txt  TODO  Teddy.pc.in  Teddy.spec.in  acinclude.m4  aclocal.m4  bootstrap  configure  configure.in  fix  meson.build  static_opt_cflags.in  static_opt_libs.in
Programs/SpaceGame/: README  configure.in  meson.build  mga.sup
Programs/SpaceGame/src/: ActionManager.cpp  ActionManager.h  Atmosphere.cpp  Atmosphere.h  Cabin.cpp  Cabin.h  ComputerController.cpp  ComputerController.h  ControlProjection.cpp  ControlProjection.h  FrontierBitmap.cpp  FrontierBitmap.h  FrontierFile.cpp  FrontierFile.h  FrontierMeshCommands.cpp  FrontierMeshVertices.cpp  FrontierModel.cpp  FrontierModel.h  FrontierObjects.cpp  Hud.cpp  Hud.h  LightwaveObjects.cpp  ModelCamera.cpp  ModelCamera.h  Node.cpp  Node.h  ObjectManager.cpp  ObjectManager.h  PlayerController.cpp  PlayerController.h  PrimitiveObjects.cpp  RoamAlgorithm.cpp  RoamAlgorithm.h  RoamInstance.cpp  RoamInstance.h  RoamObjects.cpp  RoamSphere.cpp  RoamSphere.h  Root.cpp  Root.h  (+18 more)
Programs/TeddyPlayer/: Makefile.in  meson.build
Programs/TeddyPlayer/src/: CameraController.cpp  CameraController.h  Display.cpp  Display.h  EventManager.cpp  EventManager.h  Node.cpp  Node.h  ObjectManager.cpp  ObjectManager.h  Root.cpp  Root.h  SimpleText.cpp  SimpleText.h  UserInterface.cpp  UserInterface.h
Programs/TestBasic/: conf  configure  configure.in  meson.build
Programs/TestBasic/src/: TestBasic.cpp
Programs/TestEvents/: README  TestEvents.prj  TestEvents.pws  bootstrap  configure  meson.build
Programs/TestEvents/src/: BallStack.cpp  BallStack.h  Bender.cpp  Bender.h  Bouncer.cpp  Bouncer.h  CameraController.cpp  CameraController.h  Display.cpp  Display.h  Gadget.cpp  Gadget.h  LSystem.cpp  LSystem.h  LSystemExpand.cpp  LSystemGenerate.cpp  Node.cpp  Node.h  ObjectManager.cpp  ObjectManager.h  ObjectManagerBallStacks.cpp  ObjectManagerLSystems.cpp  ObjectManagerLWO.cpp  ObjectManagerLights.cpp  Orbiter.cpp  Root.h  (+11 more)
Teddy/: Teddy.cpp  Teddy.h  TeddyConfig.h  TeddyConfig.h.in  meson.build
Teddy/Application/: BaseAudioManager.cpp  BaseAudioManager.h  BaseObjectManager.cpp  BaseObjectManager.h  BaseRoot.cpp  BaseRoot.h  BaseSimulationTimer.cpp  BaseSimulationTimer.h  BaseUserInterface.cpp  BaseUserInterface.h
Teddy/Behaviour/: Control.cpp  Control.h  ModelAnimator.cpp  ModelAnimator.h  ModelController.cpp  ModelController.h
Teddy/Graphics/: Color.cpp  Color.h  Device.cpp  Device.h  Font.cpp  Font.h  Graphics.h  ImageFileTexture.cpp  ImageFileTexture.h  ImageFileTextureLoader.cpp  ImageFileTextureLoader.h  PixFileTexture.cpp  PixFileTexture.h  PsRenderer.cpp  PsRenderer.h  Texture.cpp  Texture.h  TextureConversions.cpp  TextureManager.cpp  TextureManager.h  View.cpp  View.h  ViewClient.cpp  ViewClient.h  ViewDraw.cpp  ViewFeatures.cpp  ViewGL.cpp  ViewScreenshot.cpp  convgltex.cpp  convgltex.h  glu_mipmap.cpp  glu_mipmap.h
Teddy/Imports/: Imports.h  LWBone.cpp  LWBone.h  LWCamera.cpp  LWCamera.h  LWChannelEnvelope.cpp  LWChannelEnvelope.h  LWChannelKey.cpp  LWChannelKey.h  LWClip.cpp  LWClip.h  LWEnvelope.cpp  LWEnvelope.h  LWEnvelopeKey.cpp  LWEnvelopeKey.h  LWFile.cpp  LWFile.h  LWInstance.cpp  LWInstance.h  LWLayer.cpp  LWLayer.h  LWLight.cpp  LWLight.h  LWLight.h~  LWModel.cpp  LWModel.h  LWModelLoader.cpp  LWModelLoader.h  LWMotion.cpp  LWMotion.h  LWScene.cpp  LWSceneCamera.cpp  LWSceneEffects.cpp  LWSceneFile.cpp  LWSceneFile.h  LWSceneLight.cpp  LWSceneObject.cpp  LWSceneObjectDisplacement.cpp  LWSceneObjectSkeleton.cpp  LWSceneOptions.cpp  (+16 more)
Teddy/Materials/: Light.cpp  Light.h  Material.cpp  Material.h  MaterialOptions.h  Materials.h
Teddy/Maths/: CrossVector4.cpp  CrossVector4.h  Maths.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rect.h  Rectangle.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h
Teddy/MixIn/: Counted.cpp  Counted.h  Loader.h  MixIn.h  Mutex.cpp  Mutex.h  Named.cpp  Named.h  Options.cpp  Options.h  PostInit.cpp  PostInit.h  Tick.cpp  Tick.h
Teddy/Models/: Box.cpp  Box.h  Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Element.cpp  Element.h  Face.cpp  Face.h  FaceCollisionModel.cpp  FaceSurface.cpp  Geometry.cpp  Geometry.h  GeometryCollisionModel.cpp  GeometryIterator.cpp  GeometryIterator.h  GeometryTextureCoordinates.cpp  Grid.cpp  Grid.h  Line.cpp  Line.h  LineGeometry.cpp  LineGeometry.h  Model.cpp  Model.h  ModelDraw.cpp  ModelMatrices.cpp  ModelTransform.cpp  Models.h  PointGeometry.cpp  PointGeometry.h  QuadStrip.cpp  QuadStrip.h  Quads.cpp  Quads.h  Ring.cpp  Ring.h  (+14 more)
Teddy/PhysicalComponents/: ActionButton.cpp  ActionButton.h  Area.cpp  Area.h  AreaDraw.cpp  AreaLayout.cpp  Button.cpp  Button.h  Console.cpp  Console.h  ConsoleStream.cpp  ConsoleStream.h  ConsoleStreamBuffer.cpp  ConsoleStreamBuffer.h  Dock.cpp  Dock.h  EventListener.cpp  EventListener.h  EventListener2.h  Fill.cpp  Fill.h  Frame.cpp  Frame.h  GradientFill.cpp  GradientFill.h  Label.cpp  Label.h  Layer.cpp  Layer.h  MenuList.cpp  MenuList.h  PhysicalComponents.h  Popup.cpp  Popup.h  Projection.cpp  Projection.h  Style.cpp  Style.h  WindowManager.cpp  WindowManager.h
Teddy/Scenes/: Camera.cpp  Camera.h  Ellipsoid.cpp  Ellipsoid.h  PostElement.cpp  PostElement.h  Scene.cpp  Scene.h  Scenes.h  SkyBox.cpp  SkyBox.h
Teddy/Signals/: Functor.cpp  Functor.h
Teddy/SysSupport/: EndianIO.cpp  EndianIO.h  EndianIn.cpp  EndianIn.h  EndianOut.cpp  EndianOut.h  Exception.cpp  Exception.h  FileScan.cpp  FileScan.h  MemoryBlock.cpp  MemoryBlock.h  Messages.cpp  Messages.h  StdAlgo.cpp  StdAlgo.h  StdIO.h  StdList.cpp  StdList.h  StdMap.cpp  StdMap.h  StdMaths.cpp  StdMaths.h  StdSDL.h  StdStack.cpp  StdStack.h  StdString.cpp  StdString.h  StdVector.cpp  StdVector.h  SysSupport.h  Timer.cpp  Timer.h  Types.h  doc_page_build_process.h  doc_page_coding_conventions.h  doc_page_cvs_support.h  doc_page_design.h  doc_page_environment.h  doc_page_getting.h  (+3 more)
(+32 files in other folders)
