teddy = static_library(
    'teddy',

    sources : [
        'Application/BaseAudioManager.cpp',
        'Application/BaseObjectManager.cpp',
        'Application/BaseRoot.cpp',
        'Application/BaseSimulationTimer.cpp',
        'Application/BaseUserInterface.cpp',
        'Behaviour/Control.cpp',
        'Behaviour/ModelAnimator.cpp',
        'Behaviour/ModelController.cpp',
        'Graphics/Color.cpp',
        'Graphics/convgltex.cpp',
        'Graphics/Device.cpp',
        'Graphics/Font.cpp',
        'Graphics/glu_mipmap.cpp',
        'Graphics/ImageFileTexture.cpp',
        'Graphics/ImageFileTextureLoader.cpp',
        'Graphics/PixFileTexture.cpp',
        'Graphics/PsRenderer.cpp',
        'Graphics/Texture.cpp',
        'Graphics/TextureConversions.cpp',
        'Graphics/TextureManager.cpp',
        'Graphics/View.cpp',
        'Graphics/ViewClient.cpp',
        'Graphics/ViewDraw.cpp',
        'Graphics/ViewFeatures.cpp',
        'Graphics/ViewGL.cpp',
        'Graphics/ViewScreenshot.cpp',
        'Imports/LWBone.cpp',
        'Imports/LWCamera.cpp',
        'Imports/LWChannelEnvelope.cpp',
        'Imports/LWChannelKey.cpp',
        'Imports/LWClip.cpp',
        'Imports/LWEnvelope.cpp',
        'Imports/LWEnvelopeKey.cpp',
        'Imports/LWFile.cpp',
        'Imports/LWInstance.cpp',
        'Imports/LWLayer.cpp',
        'Imports/LWLight.cpp',
        'Imports/LWModel.cpp',
        'Imports/LWModelLoader.cpp',
        'Imports/LWMotion.cpp',
        'Imports/LWScene.cpp',
        'Imports/LWSceneCamera.cpp',
        'Imports/LWSceneEffects.cpp',
        'Imports/LWSceneFile.cpp',
        'Imports/LWSceneLight.cpp',
        'Imports/LWSceneObject.cpp',
        'Imports/LWSceneObjectDisplacement.cpp',
        'Imports/LWSceneObjectSkeleton.cpp',
        'Imports/LWSceneOptions.cpp',
        'Imports/LWSceneParser.cpp',
        'Imports/LWSceneRecord.cpp',
        'Imports/LWSurface.cpp',
        'Imports/LWSurfaceBlok.cpp',
        'Imports/LWSurfaceBlokGradient.cpp',
        'Imports/LWSurfaceBlokImageMap.cpp',
        'Imports/LWSurfaceBlokProcedural.cpp',
        'Imports/LWSurfaceBlokShader.cpp',
        'Imports/LWTexture.cpp',
        'Materials/Light.cpp',
        'Materials/Material.cpp',
        'Maths/CrossVector4.cpp',
        'Maths/Matrix.cpp',
        'Maths/Plane.cpp',
        'Maths/Quaternion.cpp',
        'Maths/Vector.cpp',
        'Maths/Vector2.cpp',
        'Maths/Vector4.cpp',
        'MixIn/Counted.cpp',
        'MixIn/Loader.cpp',
        'MixIn/Mutex.cpp',
        'MixIn/Named.cpp',
        'MixIn/Options.cpp',
        'MixIn/PostInit.cpp',
        'MixIn/Tick.cpp',
        'Models/Box.cpp',
        'Models/Capsule.cpp',
        'Models/Cone.cpp',
        'Models/Cylinder.cpp',
        'Models/Element.cpp',
        'Models/Face.cpp',
        'Models/FaceCollisionModel.cpp',
        'Models/FaceSurface.cpp',
        'Models/Geometry.cpp',
        'Models/GeometryCollisionModel.cpp',
        'Models/GeometryIterator.cpp',
        'Models/GeometryTextureCoordinates.cpp',
        'Models/Grid.cpp',
        'Models/Line.cpp',
        'Models/LineGeometry.cpp',
        'Models/Model.cpp',
        'Models/ModelDraw.cpp',
        'Models/ModelMatrices.cpp',
        'Models/ModelTransform.cpp',
        'Models/PointGeometry.cpp',
        'Models/Quads.cpp',
        'Models/QuadStrip.cpp',
        'Models/Ring.cpp',
        'Models/Solids.cpp',
        'Models/Sphere.cpp',
        'Models/Torus.cpp',
        'Models/TriangleFan.cpp',
        'Models/Triangles.cpp',
        'Models/TriangleStrip.cpp',
        'Models/Vertex.cpp',
        'PhysicalComponents/ActionButton.cpp',
        'PhysicalComponents/Area.cpp',
        'PhysicalComponents/AreaDraw.cpp',
        'PhysicalComponents/AreaLayout.cpp',
        'PhysicalComponents/Button.cpp',
        'PhysicalComponents/Console.cpp',
        'PhysicalComponents/ConsoleStream.cpp',
        'PhysicalComponents/ConsoleStreamBuffer.cpp',
        'PhysicalComponents/Dock.cpp',
        'PhysicalComponents/EventListener.cpp',
        'PhysicalComponents/Fill.cpp',
        'PhysicalComponents/Frame.cpp',
        'PhysicalComponents/GradientFill.cpp',
        'PhysicalComponents/Label.cpp',
        'PhysicalComponents/Layer.cpp',
        'PhysicalComponents/MenuList.cpp',
        'PhysicalComponents/Popup.cpp',
        'PhysicalComponents/Projection.cpp',
        'PhysicalComponents/Style.cpp',
        'PhysicalComponents/WindowManager.cpp',
        'Scenes/Camera.cpp',
        'Scenes/Ellipsoid.cpp',
        'Scenes/PostElement.cpp',
        'Scenes/Scene.cpp',
        'Scenes/SkyBox.cpp',
        'Signals/Functor.cpp',
        'SysSupport/EndianIn.cpp',
        'SysSupport/EndianIO.cpp',
        'SysSupport/EndianOut.cpp',
        'SysSupport/Exception.cpp',
        'SysSupport/FileScan.cpp',
        'SysSupport/MemoryBlock.cpp',
        'SysSupport/Messages.cpp',
        'SysSupport/StdAlgo.cpp',
        'SysSupport/StdList.cpp',
        'SysSupport/StdMap.cpp',
        'SysSupport/StdMaths.cpp',
        'SysSupport/StdStack.cpp',
        'SysSupport/StdString.cpp',
        'SysSupport/StdVector.cpp',
        'SysSupport/Timer.cpp',
        'Teddy.cpp'
    ],

    dependencies : [
        sdl2_dep,
        SDL2_mixer_dep,
        libjpeg_dep,
        libpng_dep,
        zlib_dep
    ],

    include_directories : [
        include_directories('..')
    ]
)

teddy_dep = declare_dependency(
    include_directories : include_directories('..')
)
