SpaceGame = executable(
    'SpaceGame',

    sources : [
        'src/RoamAlgorithm.cpp',
        'src/PlayerController.cpp',
        'src/Sight.cpp',
        'src/SpectatorCamera.cpp',
        'src/Ship.cpp',
        'src/LightwaveObjects.cpp',
        'src/PrimitiveObjects.cpp',
        'src/Hud.cpp',
        'src/Scanner.cpp',
        'src/Root.cpp',
        'src/ControlProjection.cpp',
        'src/ShipController.cpp',
        'src/RoamSphere.cpp',
        'src/ComputerController.cpp',
        'src/ModelCamera.cpp',
        'src/FrontierMeshCommands.cpp',
        'src/FrontierBitmap.cpp',
        'src/ActionManager.cpp',
        'src/RoamObjects.cpp',
        'src/Atmosphere.cpp',
        'src/FrontierObjects.cpp',
        'src/VertexArray.cpp',
        'src/RoamInstance.cpp',
        'src/ShipType.cpp',
        'src/ObjectManager.cpp',
        'src/SpaceGame.cpp',
        'src/Node.cpp',
        'src/FrontierModel.cpp',
        'src/UserInterface.cpp',
        'src/ShipTracking.cpp',
        'src/FrontierMeshVertices.cpp',
        'src/FrontierFile.cpp',
        'src/Cabin.cpp',
    ],

    dependencies : [
        teddy_dep,
        opengl_dep,
        sdl2_dep,
        SDL2_mixer_dep,
        SDL2_image_dep,
        libjpeg_dep,
        libpng_dep,
        zlib_dep
    ],

    link_with : [
        teddy
    ]

)
