TestBasic = executable(
    'TestBasic',

    sources : [
        'src/TestBasic.cpp'
    ],

    dependencies : [
        teddy_dep,
        opengl_dep,
        sdl2_dep,
        SDL2_mixer_dep,
        SDL2_image_dep,
        libjpeg_dep,
        libpng_dep,
        zlib_dep
    ],

    link_with : [
        teddy
    ]
)
