TestEvents = executable(
    'TestEvents',

    sources : [
        'src/CameraController.cpp',
        'src/ObjectManagerLWO.cpp',
        'src/Gadget.cpp',
        'src/Bender.cpp',
        'src/Tree.cpp',
        'src/SimpleText.cpp',
        'src/Orbiter.cpp',
        'src/Bouncer.cpp',
        'src/Root.cpp',
        'src/ObjectManagerLSystems.cpp',
        'src/LSystem.cpp',
        'src/LSystemGenerate.cpp',
        'src/ObjectManagerBallStacks.cpp',
        'src/ObjectManagerLights.cpp',
        'src/Display.cpp',
        'src/ObjectManager.cpp',
        'src/Node.cpp',
        'src/UserInterface.cpp',
        'src/LSystemExpand.cpp',
        'src/ObjectManagerTrees.cpp',
        'src/State.cpp',
        'src/BallStack.cpp'
    ],

    dependencies : [
        teddy_dep,
        opengl_dep,
        sdl2_dep,
        SDL2_mixer_dep,
        SDL2_image_dep,
        libjpeg_dep,
        libpng_dep,
        zlib_dep
    ],

    link_with : [
        teddy
    ]
)
